--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -32,6 +32,20 @@ html {
 	}
 }
 
+@keyframes loadingBg {
+	0% {
+		background-position: 2%;
+	}
+
+	100% {
+		background-position: 100%;
+	}
+}
+
+.main {
+	background-color: #fff;
+}
+
 .fade-in {
 	opacity: 1;
 	animation-delay: 0s;
@@ -78,8 +92,7 @@ html {
 	align-items: center;
 	padding: 1.25vw 2.4vw;
 	overflow: hidden;
-	transition-property: color, background, transform;
-	transition: 0.3s ease-in-out;
+	transition: transform 0.3s ease-in-out;
 
 	span {
 		position: relative;
@@ -97,6 +110,7 @@ html {
 	&--white {
 		background: #fff;
 		color: $accent-color;
+		transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
 
 		&:hover {
 			color: #fff;
@@ -107,6 +121,7 @@ html {
 	&--blue {
 		color: #fff;
 		background: $accent-color;
+		transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
 
 		&:hover {
 			background: darken($color: $accent-color, $amount: 20%);
@@ -116,6 +131,7 @@ html {
 	&:hover:not(:disabled),
 	&:hover:not(.disabled) {
 		cursor: pointer;
+		overflow: visible;
 
 		.btn-blick::after {
 			opacity: 0;
@@ -370,7 +386,6 @@ html {
 	position: relative;
 	z-index: 1;
 
-
 	& .custom-select-opener {
 		background-color: #fff;
 		padding: 1.45vw 1vw;
@@ -400,7 +415,7 @@ html {
 	}
 
 	& .custom-select-container.is-open .custom-select-panel {
-		max-height: 8.5vw;
+		max-height: fit-content;
 	}
 
 	& .custom-select-container.is-open .custom-select-opener::after {
@@ -461,6 +476,43 @@ html {
 	}
 }
 
+.input-arrow {
+	position: absolute;
+	right: 1vw;
+	width: 1vw;
+	height: 0.8vw;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: background 0.3s ease-in-out;
+
+	svg {
+		width: 0.52vw;
+		height: 0.3125vw;
+	}
+
+	path {
+		stroke: $gray-1;
+		transition: stroke 0.3s ease-in-out;
+	}
+
+	&__up {
+		top: 1.1vw;
+	}
+
+	&__down {
+		bottom: 1.1vw;
+	}
+
+	&:hover {
+		background: $gray-4;
+
+		path {
+			stroke: $accent-color;
+		}
+	}
+}
+
 
 @media (max-width: 768px) {
 	html {
@@ -481,6 +533,25 @@ html {
 		margin: 0 auto;
 	}
 
+	.section-title {
+		font-size: 2.4rem;
+		line-height: 125%;
+	}
+
+	.btn-top {
+		bottom: -4rem;
+		right: 1.3vw;
+		width: 3rem;
+		height: 3rem;
+		border-radius: 0.1rem;
+
+		svg {
+			bottom: 0.1rem;
+			width: 1rem;
+			height: 0.7rem;
+		}
+	}
+
 	.main-btn {
 		padding: 1.6rem 3rem;
 
@@ -496,6 +567,103 @@ html {
 		.main-btn:not(:disabled) &::after,
 		.main-btn:not(.disabled) &::after {
 			width: 2rem;
+		}
+	}
+
+	.label {
+		gap: 0.6rem;
+		flex: 0 0 100%;
+		font-size: 1.2rem;
+		line-height: 1.5rem;
+	}
+
+	.input {
+		padding: 1.5rem 2rem;
+		border: 0.1rem solid $gray-5;
+		border-radius: 0.1rem;
+		font-size: 1.2rem;
+		line-height: 1.5rem;
+	}
+
+	.input-arrow {
+		right: 0.5rem;
+		width: 2rem;
+		height: 0.8rem;
+
+		svg {
+			width: 1.2rem;
+			height: 0.8rem;
+		}
+
+		&__up {
+			top: 1.1rem;
+		}
+
+		&__down {
+			bottom: 1.1rem;
+		}
+	}
+
+	.select {
+		font-size: 1.2rem;
+		line-height: 1.5rem;
+
+		& .custom-select-opener {
+			padding: 1.5rem 2rem;
+			border: 0.1rem solid $gray-5;
+			border-radius: 0.1rem;
+
+			&::after {
+				right: -1rem;
+				width: 0.5rem;
+				height: 0.5rem;
+				border-left: 0.1rem solid $gray-1;
+				border-bottom: 0.1rem solid $gray-1;
+			}
+		}
+
+		& .custom-select-option {
+			padding: 1.45rem 1rem;
+		}
+	}
+
+	.select-social {
+		&__img {
+			right: 2rem;
+		}
+
+		.social__item-telegram,
+		.social__item-whatsapp {
+			width: 2.7rem;
+			height: 2.7rem;
+
+			svg {
+				width: 1.1rem;
+				height: 1.1rem;
+			}
+		}
+	}
+
+	.agree {
+		&__checkbox {
+			position: relative;
+			top: 0.3rem;
+			flex: 0 0 1rem;
+			height: 1rem;
+			margin-right: 0.8rem;
+			border-radius: 0.1rem;
+			border: 0.1rem solid $accent-color;
+
+			&::after {
+				width: 0.429rem;
+				height: 0.286rem;
+			}
+		}
+
+		&__text,
+		&__link {
+			font-size: 0.8rem;
+			line-height: 125%;
 		}
 	}
 }
