--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,5 +19,8 @@ body {
 @import "_nav.scss";
 @import "_hero.scss";
 @import "_quiz.scss";
+@import "_services.scss";
+@import "_benefits.scss";
+@import "_portfolio.scss";
 
 @import "_popup.scss";
