--- a/scss/_nullstyle.scss
+++ b/scss/_nullstyle.scss
@@ -36,10 +36,9 @@ body {
 }
 
 img {
-	max-width: 100%;
-	max-height: 100%;
 	width: 100%;
-	vertical-align: top;
+	height: 100%;
+	display: block;
 }
 
 p,
