--- a/scss/_quiz.scss
+++ b/scss/_quiz.scss
@@ -680,7 +680,8 @@
 				.quiz__body {
 					padding-top: 0;
 					padding-left: 0;
-					padding-bottom: 17rem;
+					// padding-bottom: 17rem;
+					padding-bottom: 26rem;
 				}
 			}
 		}
