--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,5 +22,11 @@ body {
 @import "_services.scss";
 @import "_benefits.scss";
 @import "_portfolio.scss";
+@import "_about.scss";
+@import "_warranty.scss";
+@import "_report.scss";
+@import "_steps.scss";
+@import "_after.scss";
+@import "_questions.scss";
 
 @import "_popup.scss";
