--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -146,16 +146,16 @@
 
 @media (max-width: 768px) {
 	.portfolio {
-		padding-top: 4.4rem;
+		padding-top: 4.1rem;
 		padding-bottom: 2.2rem;
 
 		&__title {
 			margin-right: -0.1rem;
-			margin-bottom: 2.4rem;
+			margin-bottom: 2.6rem;
 		}
 
 		&__list {
-			row-gap: 1.6rem;
+			row-gap: 1.5rem;
 			margin-bottom: 2rem;
 		}
 
@@ -166,7 +166,7 @@
 
 		&__sliders {
 			height: 14rem;
-			margin-bottom: 1.2rem;
+			margin-bottom: 1.1rem;
 		}
 
 		&__swiper {
@@ -219,6 +219,12 @@
 
 		&__btn {
 			border-width: 0.1rem;
+			padding: 0.8rem;
+
+			span {
+				line-height: 280%;
+				letter-spacing: 0.09em;
+			}
 		}
 
 		&__btn-more {
