--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -174,6 +174,13 @@
 		color: #fff;
 		height: 9.27vw;
 		overflow-y: auto;
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+
+		&::-webkit-scrollbar {
+			display: none;
+		}
+
 
 		li {
 			position: relative;
